examples/local-advanced/day-0/01-consul-api-gateway/base/consul/gateway.multi.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
  namespace: consul
spec:
  gatewayClassName: consul-api-gateway
  listeners:
  - name: https
    protocol: HTTPS
    port: 8443
    #hostname: "*"
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      certificateRefs:
        - kind: Secret
          group: ""
          name: consul-server-cert
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway-insecure
  namespace: consul
spec:
  gatewayClassName: consul-api-gateway
  listeners:
  - name: http
    protocol: HTTP
    port: 8000
    hostname: "*.local"
    allowedRoutes:
      namespaces:
        from: Same # Same | All | Selector
