examples/local-advanced/day-0/01-consul-api-gateway/base/consul/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
  namespace: consul
spec:
  gatewayClassName: consul-api-gateway
  listeners:
  - protocol: HTTPS
    name: https
    port: 8443
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: consul-server-cert
